# granite

./: .travis.yml  meson.build
.github/workflows/: ci.yml
demo/: meson.build
demo/Views/: DynamicNotebookView.vala  ModeButtonView.vala  UtilsView.vala
doc/: meson.build
lib/: DateTime.vala
lib/Drawing/: BufferSurface.vala  Utilities.vala
lib/GtkPatch/: AboutDialog.vala
lib/Services/: Settings.vala  SimpleCommand.vala  System.vala
lib/Widgets/: AboutDialog.vala  AbstractSimpleSettingsPage.vala  AlertView.vala  AsyncImage.vala  CollapsiblePaned.vala  DynamicNotebook.vala  MessageDialog.vala  OverlayBar.vala  SeekBar.vala  SourceList.vala  Utils.vala
